client/design/sass/modules/_modal.scss
// the semi transparent dark background that covers the whole screen
div.modalBackground{
	position: fixed;
	top: 0;
	left: 0;

	width: 100%;
	height: 100%;

	background-color: rgba(0,0,0,0.4);

	z-index: 10;

	// set to flex to display the content
	display: none;

	// centers the modal both horizontally and vertically
	align-items: middle;
	justify-content: center;

	transition: all 0.3s ease-in-out;

}
div.modalBackground.active{
	// desktop
	@media screen and (min-width: $medium-screen){
		display: flex;
	}

	// mobile
	@media screen and (max-width: $medium-screen){
		display: block;
	}
}


// The Modal itself
div.modal{
	background-color: $backgroundColor;
	
	position: relative;
	
	animation-duration: 0.4s;

	transition: all 0.3s ease-in-out;

	// desktop
	@media screen and (min-width: $medium-screen){
		width: 40%;
		animation-name: modalFadeInDesktop;
	}

	// mobile
	@media screen and (max-width: $medium-screen){
		width: 100%;
		animation-name: modalFadeInMobile;

		position: absolute;
		left: 0;
		bottom: 0;
	}
}

// Modal Header
div.modalHeader{
	line-height: 2em;
	letter-spacing: 0.1em;
	font-size: 1.3em;
	text-align: center;

	padding: 0.2em 0;
	margin: 0 1em;

	border-bottom: 0.1em solid $highlightColor;
}

// Modal Content
div.modalContent{
	padding: 1.5em 2em;
}

// Animations
@keyframes modalFadeInDesktop {
    from {margin-top: -10em; opacity: 0}
    to {margin-top: 0em; opacity: 1}
}

@keyframes modalFadeInMobile {
    from {bottom: -5em; opacity: 0}
    to {bottom: 0; opacity: 1}
}

